other-vpol/check-subjectaccessreview/.chainsaw-test/chainsaw-step-03-apply-6.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: cm-creator:wrongsubreviewuser
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: cm-creator
subjects:
- apiGroup: rbac.authorization.k8s.io
  kind: User
  name: wrongsubreviewuser
