other-vpol/check-subjectaccessreview/.chainsaw-test/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: subreview-ns
